<?xml version="1.0"?>
<package format="2">
  <name>wavefront_planner</name>
  <version>0.0.0</version>
  <description>The wavefront_planner package</description>
  <maintainer email="tre0430@korea.ac.kr">Ikhyeon Cho</maintainer>
  <license>.</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>ros_node_utils</depend>
  <depend>ros_transform_utils</depend>
  <depend>grid_map_core</depend>
  <depend>grid_map_ros</depend>
  <depend>grid_map_msgs</depend>
  <depend>elevation_map_server</depend>
  <depend>nav_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>