<?xml version="1.0"?>
<package format="2">
  <name>dijkstra_planner_demos</name>
  <version>0.0.0</version>
  <description>The dijkstra_planner ROS demo package</description>
  <maintainer email="tre0430@korea.ac.kr">Ikhyeon Cho</maintainer>
  <license>.</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>tf2_ros</depend>
  <depend>dijkstra_planner_core</depend>
  <depend>dijkstra_planner_msgs</depend>

  <export>
  </export>
</package>