<?xml version="1.0"?>
<package format="2">
  <name>occupancy_gridmap_core</name>
  <version>0.0.0</version>
  <description>The occupancy grid map core package</description>
  <maintainer email="tre0430@korea.ac.kr">Ikhyeon Cho</maintainer>
  <license>.</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>grid_map_core</depend>
  <depend>grid_map_cv</depend>
  <depend>nav_msgs</depend>

  <export>

  </export>
</package>