<?xml version="1.0"?>
<package format="2">
  <name>occupancy_gridmap_msgs</name>
  <version>0.0.0</version>
  <description>The occupancy gridmap msgs package</description>
  <maintainer email="tre0430@korea.ac.kr">Ikhyeon Cho</maintainer>
  <license>.</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>grid_map_msgs</depend>
  <depend>grid_map_ros</depend>
  <depend>nav_msgs</depend>
  <depend>occupancy_gridmap_core</depend>

  <export>
  </export>
</package>