<?xml version="1.0"?>
<package format="2">
  <name>occupancy_gridmap_server</name>
  <version>0.0.0</version>
  <description>The occupancy gridmap server ros package</description>
  <maintainer email="tre0430@korea.ac.kr">Ikhyeon Cho</maintainer>
  <license>.</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>occupancy_gridmap_core</depend>
  <depend>occupancy_gridmap_msgs</depend>

  <export>
  </export>
</package>