<?xml version="1.0"?>
<package format="2">
  <name>wavefront_planner_demos</name>
  <version>0.0.0</version>
  <description>The wavefront_planner ROS demo package</description>
  <maintainer email="tre0430@korea.ac.kr">Ikhyeon Cho</maintainer>
  <license>.</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>tf2_ros</depend>
  <depend>wavefront_core</depend>
  <depend>wavefront_msgs</depend>

  <export>
  </export>
</package>