<?xml version="1.0"?>
<package format="2">
  <name>waypoint_generator</name>
  <version>0.0.0</version>
  <description>The waypoint_generator package. This package generators the waypoint from the
    globally planned path</description>
  <maintainer email="tre0430@korea.ac.kr">Ikhyeon Cho</maintainer>
  <license>.</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>tf2_ros</depend>
  <depend>wavefront_planner_msgs</depend>

  <export>
  </export>
</package>