<?xml version="1.0"?>
<package format="2">
  <name>dijkstra_planner_msgs</name>
  <version>0.0.0</version>
  <description>The dijkstra_planner msgs package</description>
  <maintainer email="tre0430@korea.ac.kr">Ikhyeon Cho</maintainer>
  <license>.</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>grid_map_core</depend>
  <depend>grid_map_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
  </export>
</package>