<?xml version="1.0"?>
<package format="2">
  <name>wavefront_core</name>
  <version>0.0.0</version>
  <description>The wavefront_planner core package</description>
  <maintainer email="tre0430@korea.ac.kr">Ikhyeon Cho</maintainer>
  <license>.</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>grid_map_core</depend>
  <depend>grid_map_cv</depend>
  <depend>grid_map_ros</depend>

  <export>
  </export>
</package>